# easyscrollrec

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: release.yml
src/: index.html  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: easybrawto-aarch64-apple-darwin  easybrawto-x86_64-apple-darwin  easybrawto-x86_64-unknown-linux-gnu
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
